build.xml fixed with renamed piccolo-1.2.jar and piccolox-1.2.ja
git-svn-id: http://mmfplanner.googlecode.com/svn/trunk@5 03a97f1f-543e-0410-9ead-9d4990d7ef17

--- a/mmfplanner/build.xml
+++ b/mmfplanner/build.xml
@@ -22,8 +22,8 @@
     <pathelement location="${lib.dir}/jcommon-1.0.10.jar" />
     <pathelement location="${lib.dir}/jfreechart-1.0.6.jar" />
     <pathelement location="${lib.dir}/junit-4.4.jar" />
-    <pathelement location="${lib.dir}/piccolo.jar" />
-    <pathelement location="${lib.dir}/piccolox.jar" />
+    <pathelement location="${lib.dir}/piccolo-1.2.jar" />
+    <pathelement location="${lib.dir}/piccolox-1.2.jar" />
     <pathelement location="${lib.dir}/swing-layout-1.0.2.jar" />
     <pathelement location="${lib.dir}/xom-1.1.jar" />
   </path>
