removed jdesktop and jcommon from local maven repository
git-svn-id: http://mmfplanner.googlecode.com/svn/trunk@27 03a97f1f-543e-0410-9ead-9d4990d7ef17

--- a/mmfplanner/pom.xml
+++ b/mmfplanner/pom.xml
@@ -38,24 +38,21 @@
                         <artifactId>piccolox</artifactId>
                         <version>1.2</version>
                 </dependency>
-
 		<dependency>
     			<groupId>xom</groupId>
     			<artifactId>xom</artifactId>
     			<version>1.1d2</version>
 		</dependency> 
-
 		<dependency>
-                        <groupId>org.jdesktop</groupId>
-                        <artifactId>layout</artifactId>
-                        <version>1.0.2</version>
-                </dependency>
+			<groupId>net.java.dev.swing-layout</groupId>
+			<artifactId>swing-layout</artifactId>
+			<version>1.0.2</version>
+		</dependency> 
 		<dependency>
 			<groupId>jfree</groupId>
 			<artifactId>jfreechart</artifactId>
 			<version>1.0.7</version>
 		</dependency> 
-
 	</dependencies>
 
         <build>
