Format pom.xml using new code style
git-svn-id: http://mmfplanner.googlecode.com/svn/trunk@55 03a97f1f-543e-0410-9ead-9d4990d7ef17

--- a/mmfplanner/pom.xml
+++ b/mmfplanner/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -14,34 +13,34 @@
 		<url>http://code.google.com/p/mmfplanner</url>
 	</organization>
 
-       <repositories>
-                <repository>
-                        <id>mmfplanner.repo.lib</id>
-                        <url>file://${basedir}/repo</url>
-                </repository>
-        </repositories>
+	<repositories>
+		<repository>
+			<id>mmfplanner.repo.lib</id>
+			<url>file://${basedir}/repo</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
-              	<dependency>
-                        <groupId>junit</groupId>
-                        <artifactId>junit</artifactId>
-                        <version>4.4</version>
-                        <scope>test</scope>
-                </dependency>
 		<dependency>
-                        <groupId>edu.umd.cs</groupId>
-                        <artifactId>piccolo</artifactId>
-                        <version>1.2</version>
-                </dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.4</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
-                        <groupId>edu.umd.cs</groupId>
-                        <artifactId>piccolox</artifactId>
-                        <version>1.2</version>
-                </dependency>
+			<groupId>edu.umd.cs</groupId>
+			<artifactId>piccolo</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<dependency>
-    			<groupId>xom</groupId>
-    			<artifactId>xom</artifactId>
-    			<version>1.1d2</version>
+			<groupId>edu.umd.cs</groupId>
+			<artifactId>piccolox</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>xom</groupId>
+			<artifactId>xom</artifactId>
+			<version>1.1d2</version>
 		</dependency>
 		<dependency>
 			<groupId>net.java.dev.swing-layout</groupId>
@@ -55,55 +54,55 @@
 		</dependency>
 	</dependencies>
 
-        <build>
-                <plugins>
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <configuration>
-                                        <source>1.5</source>
-                                        <target>1.5</target>
-                                </configuration>
-                        </plugin>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
 
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-eclipse-plugin</artifactId>
-                                <configuration>
-                                        <downloadJavadocs>true</downloadJavadocs>
-                                </configuration>
-                        </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<configuration>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+			</plugin>
 
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-assembly-plugin</artifactId>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
 
-                                <configuration>
-                                        <descriptorRefs>
-                                                <descriptorRef>
-                                                        jar-with-dependencies
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>
+							jar-with-dependencies
                                                 </descriptorRef>
-                                        </descriptorRefs>
-                                        <archive>
-                                                <manifest>
-                                                        <mainClass>
-                                                                no.ntnu.mmfplanner.Main
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>
+								no.ntnu.mmfplanner.Main
                                                         </mainClass>
-                                                </manifest>
-                                        </archive>
-                                </configuration>
+						</manifest>
+					</archive>
+				</configuration>
 
-                                <executions>
-                                        <execution>
-                                                <id>mmfplanner-package-assembly</id>
-                                                <phase>package</phase>
-                                                <goals>
-                                                        <goal>attached</goal>
-                                                </goals>
-                                        </execution>
-                                </executions>
-                        </plugin>
-                </plugins>
-        </build>
+				<executions>
+					<execution>
+						<id>mmfplanner-package-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>attached</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
