Reduce jar-with-dependencies file size from 10M to 2M by dropping transitive dependencies
git-svn-id: http://mmfplanner.googlecode.com/svn/trunk@59 03a97f1f-543e-0410-9ead-9d4990d7ef17

--- a/mmfplanner/pom.xml
+++ b/mmfplanner/pom.xml
@@ -114,9 +114,9 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 
 				<configuration>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
+					<descriptors>
+						<descriptor>src/main/assembly/jar-with-dependencies.xml</descriptor>
+					</descriptors>
 					<archive>
 						<manifest>
 							<mainClass>${main.class}</mainClass>
