--- a/mmfplanner/pom.xml
+++ b/mmfplanner/pom.xml
@@ -5,7 +5,7 @@
 	
 	<groupId>no.ntnu</groupId>
 	<artifactId>mmfplanner</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1</version>
 	
 	<packaging>jar</packaging>
 	
