Ready for 1.1.2 development
git-svn-id: http://mmfplanner.googlecode.com/svn/trunk@74 03a97f1f-543e-0410-9ead-9d4990d7ef17

--- a/mmfplanner/pom.xml
+++ b/mmfplanner/pom.xml
@@ -5,7 +5,7 @@
 	
 	<groupId>no.ntnu</groupId>
 	<artifactId>mmfplanner</artifactId>
-	<version>1.1.1</version>
+	<version>1.1.2-SNAPSHOT</version>
 	
 	<packaging>jar</packaging>
 	
