--- a/mmfplanner/pom.xml
+++ b/mmfplanner/pom.xml
@@ -78,6 +78,12 @@
 			<artifactId>jaxen</artifactId>
 			<version>1.1-beta-8</version>
 		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xmlParserAPIs</artifactId>
+			<version>2.6.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<properties>
